# python-monorepo-pants-poetry

./: .gitignore  README.md  pants.toml
py/libs/lib1/: BUILD  pyproject.toml
py/libs/lib1/org/lib/: BUILD  __init__.py
py/libs/lib1/tests/: BUILD  test_foo.py
py/release-core/: BUILD  Dockerfile  pyproject.toml
py/release-core/projects/app/: pyproject.toml
py/release-core/projects/app/org/app/: test_main.py
py/release-core/projects/cli/: pyproject.toml
py/release-core/projects/cli/org/cli/: main.py  test_main.py
py/release-django4/: BUILD  pyproject.toml
py/release-django4/projects/django-project/: pyproject.toml
py/release-django4/projects/django-project/org/django_project/: BUILD  main.py  test_main.py
py/sandbox/projects/experimental-app/: pyproject.toml
py/sandbox/projects/experimental-app/org/experimental_app/: main.py  test_main.py
