[tool.poetry]
name = "release-core"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.app.dependencies]
org-app = { path = "projects/app", develop = true}

[tool.poetry.group.lib.dependencies]
org-lib = { path = "../libs/lib1", develop = true}

[tool.poetry.group.cli.dependencies]
org-cli = { path = "projects/cli", develop = true}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
