[tool.poetry]
name = "org-lib"
version = "0.0.0"
description = ""
authors = []
packages = [{include = "org"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = { extras = ["email"], version = ">=1.10.2"}
pytest = { version = "*", optional = true }

[tool.poetry.extras]
test = ["pytest"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
